letter model, history

--- a/letter/templates/index.html
+++ b/letter/templates/index.html
@@ -1,7 +1,7 @@
 <html>
-<head><title>Web Title</title><head>
+<head><title>Letter: Say hello to your future.</title><head>
 <body>
-    <h1>Web Header</h1>
+    <h1>Letter</h1>
     <h2>login</h2><br>
     <form method="POST" action="letter/login">
 	{% csrf_token %}
