--- a/letter/templates/home.html
+++ b/letter/templates/home.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 	<h1>Hello {{ user.get_username }}</h1><br>
-	<form action="letter/logout">
-        	<input type="submit" value="logout" />
-	</form>
+	<form action="letter/write"><input type="submit" id='id_write_letter' value="write a letter" /></form>
+	<form action="letter/history"><input type="submit" id='id_history' value="history" /></form>
+	<form action="letter/logout"><input type="submit" id='id_logout' value="logout" /></form>
 </body>
 </html>
