--- a/letter/templates/write_letter.html
+++ b/letter/templates/write_letter.html
@@ -22,7 +22,7 @@
     				<label for="{{ form.datetime.id_for_label }}">Send to:</label>
 				{{ letter_form.datetime }}
 			</div>
-			<input type='submit' value='Send' />
+			<input type='submit' id='id_send' value='Send' />
 		</form>
 	</body>
 </html>
