inbox and letter detail

--- a/letter/templates/home.html
+++ b/letter/templates/home.html
@@ -6,6 +6,7 @@
 	<h1>Hello {{ user.get_username }}</h1><br>
 	<form action="letter/write"><input type="submit" id='id_write_letter' value="write a letter" /></form>
 	<form action="letter/history"><input type="submit" id='id_history' value="history" /></form>
+	<form action="letter/inbox"><input type="submit" id='id_inbox' value="inbox" /></form>
 	<form action="letter/logout"><input type="submit" id='id_logout' value="logout" /></form>
 </body>
 </html>
