send email command

--- a/letter/templates/inbox.html
+++ b/letter/templates/inbox.html
@@ -29,7 +29,7 @@
 		</style>
 	</head>
 	<body>
-		<table id='id_history_table'>
+		<table id='id_inbox_table'>
   			<tr>
     				<th>No.</th>
 				<th>Subject</th>
